2013-06-22  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (auto-mode-alist): Do not use
	`regexp-opt', it breaks the build during dumping.

2013-06-21  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Highlight
	keyword-like methods on Kernel and Module with
	font-lock-builtin-face.
	(auto-mode-alist): Consolidate different entries into one regexp
	and add more *file-s.

2013-06-21  Stephen Berman  <stephen.berman@gmx.net>

	* obsolete/otodo-mode.el: Move and rename from calendar/todo-mode.el.

	* calendar/diary-lib.el (diary-goto-entry-function): New variable.
	(diary-entry): Use it in the action of this button type instead of
	diary-goto-entry.

	* calendar/todo-mode.el: New version.
	(todo-add-category): Append new category to end of file and give
	it the highest number, instead of putting it at the beginning and
	giving it 0.  Incorporate noninteractive functionality.
	(todo-forward-category): Adapt to 1-based category numbering.
	Allow skipping over archived categories.
	(todo-backward-category): Derive from todo-forward-category.
	(todo-backward-item, todo-forward-item): Make noninteractive and
	delegate interactive part to new commands.  Make sensitive to done items.
	(todo-categories): Make value an alist of category names and
	vectors of item counts.
	(todo-category-beg): Make a defconst.
	(todo-category-number): Use 1 instead of 0 as initial value.
	(todo-category-select): Make sensitive to overlays, optional item
	highlighting and done items.
	(todo-delete-item): Make sensitive to overlays and marked and done items.
	(todo-edit-item): Make sensitive to overlays and editing of
	date/time header optional.  Add format checks.
	(todo-edit-multiline): Rename to todo-edit-multiline-item.  Make a
	no-op if point is not on an item.  Advertise using todo-edit-quit.
	(todo-edit-mode): Make sensitive to new format, font-locking, and
	multiple todo files.
	(todo-insert-item, todo-insert-item-here): Derive from