@@ -1,3 +1,7 @@
+2013-06-22  Glenn Morris  <rgm@fencepost.gnu.org>
+
+	* progmodes/gdb-mi.el (gdb-mapcar*): Remove, replace with cl-mapcar.
+
 2013-06-22  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* progmodes/ruby-mode.el (auto-mode-alist): Do not use
